--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,48 @@
+@import "./assets/fonts/early_gameboy/font.css",
+"./assets/fonts/pretendo/font.css";
+
 /* You can add global styles to this file, and also import other style files */
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+html,
+body {
+    overflow-x: hidden;
+    background-color: black;
+    font-family: serif;
+    font-size: 14px;
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    height: 100%;
+}
+
+body {
+    position: relative;
+    -webkit-user-select: none;
+    -webkit-touch-callout: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
+.canvas {
+    &::before {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: calc(100% - 2px);
+        box-shadow: inset 2px 2px 10px 1px rgba(0, 0, 0, 0.5);
+    }
+}
+
+.hidden {
+    display: none;
+    opacity: 0;
+}
